# route-runner

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  arm-none-eabi-gcc.cmake
app/: CMakeLists.txt  main.c
app/stm32f303x8/: CMakeLists.txt  main.c  sandbox.c  sandbox_adc.c  sandbox_devices.c  sandbox_tim3.c  task.c  task.h
apps/freertos/: CMakeLists.txt  domain_dump_task.cpp  domain_dump_task.hpp  event_group.hpp  immediate_stop_task.cpp  immediate_stop_task.hpp  isr_event_emitter_adapter.hpp  main.cpp  manual_control_dispatch_task.cpp  manual_control_dispatch_task.hpp  manual_dispatch_task.cpp  manual_dispatch_task.hpp  manual_mode_switch_task.cpp  manual_mode_switch_task.hpp  manual_motion_task.cpp  manual_motion_task.hpp  manual_pid_tune_task.cpp  manual_pid_tune_task.hpp  memory_usage_dump_task.cpp  memory_usage_dump_task.hpp  mutex.hpp  remote_control_dispatch_task.hpp  remote_control_motion_task.hpp  route_guard_toggle_task.cpp  route_guard_toggle_task.hpp  shell_command_task.cpp  shell_command_task.hpp  shell_output_task.cpp  shell_output_task.hpp  stack_overflow_handler.cpp  stack_overflow_handler.hpp  stream_buffer.cpp  stream_buffer.hpp  task_base.hpp  task_domain_dump.cpp  task_domain_dump.hpp  task_factory.cpp  task_factory.hpp  task_immediate_stop.cpp  task_immediate_stop.hpp  (+16 more)
lib/libopencm3/: CMakeLists.txt
lib/stm32f303x8/: CMakeLists.txt
lib/stm32l476rgtx/: CMakeLists.txt
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt  adapter_control_dualshock2.c  adapter_coords_qtrhd06a.c  adapter_debug_usart.c  adapter_dump_serial.c  adapter_line_position_qtrhd06a.c  adapter_mode_blink.c  adapter_mode_indicator_and_guard.c  adapter_mode_indicator_led.c  adapter_mode_led_indicator.c  adapter_mode_listener.c  adapter_motion_l293.c  adapter_motion_usart.c  adapter_remote_control_dualshock2.c  adapter_route_guard.c  adapter_route_guard_tim15.c  adapter_state_indicator_led.c  motion_adapter_l293.cpp  motion_l293.c  motion_l293.cpp  printer_shell.cpp  route_guard_timeout.cpp  status_indicator_dummy.cpp  status_indicator_toggle_sequence.cpp
src/adapters_legacy/: adapter_coords_qtrhd06a.c  adapter_motion_l293.c
src/app_bare_stm32f303x8/: CMakeLists.txt  main.c  sandbox_devices.c
src/core/: CMakeLists.txt  core.c  core.h  core_control.c  core_coords.c  core_mode.c  core_motion.c  core_motion_factory.c  core_motion_factory.h  core_port.h  core_position.c  core_position_regulator.c  core_position_regulator.h  core_remote_control_apply_chain.c  core_remote_control_apply_chain.h  core_task.h  core_task_debug.c  core_task_line_position_receive.c  core_task_motion_update.c  core_task_remote_control_receive.c  core_task_state_indicator_update.c  core_task_vehicle_state_update.c  core_type.h  core_vehicle.c  core_vehicle_command_apply.c  core_vehicle_command_apply.h  core_vehicle_manual_motion_apply.c  core_vehicle_manual_motion_apply.h  core_vehicle_mode_apply.c  core_vehicle_mode_apply.h  core_vehicle_motion_apply.c  core_vehicle_motion_apply.h  core_vehicle_state_apply.c  core_vehicle_state_apply.h  core_vehicle_state_transition_chain.c  core_vehicle_state_transition_chain.h  core_vehicle_tracking_motion_apply.c  core_vehicle_tracking_motion_apply.h
src/devices/: CMakeLists.txt
src/driver/: CMakeLists.txt
src/drivers/: CMakeLists.txt  dualshock2.c  dualshock2.h  gpio.c  gpio.h  spi.c  spi.h  tim3.c
src/freertos_config/: CMakeLists.txt  FreeRTOSConfig.h
src/hardware/: CMakeLists.txt
src/idevices/: CMakeLists.txt
src/linebot/: CMakeLists.txt  actions_dispatcher.hpp  api.c  api.cpp  api_apply_manual_motion.c  api_apply_tracking_motion.c  api_change_mode.c  api_stop.c  command.c  command.h  context.c  context.h  coordinates.cpp  coordinates_error_center_of_mass.hpp  coords.c  coords.h  data_store.cpp  linebot.c  linebot.h  maneuver_factory.hpp  mode.c  mode.h  mode_state_machine.hpp  motion.c  motion.h  motion_api.cpp  motion_factory.c  motion_factory.h  pid_regulator.hpp  pid_tuner.hpp  position.c  position.h  position_regulator.c  position_regulator.h
src/main_bare_stm32f3/: CMakeLists.txt  sandbox_adc.c  sandbox_legacy_devices.c  sandbox_tim15.c
src/main_freertos_libopencm3_stm32f3/: CMakeLists.txt  application.c  application.h  isr_event_emitter_adapter.hpp  main.c  main.cpp  notifications.c  notifications.h  task_base.h  task_base.hpp  task_domain_dump.cpp  task_domain_dump.h  task_factory.hpp  task_immediate_stop.cpp  task_immediate_stop.h  task_immediate_stop.hpp  task_manual_control.cpp  task_manual_control.h  task_manual_control.hpp  task_route_tracking.cpp  task_route_tracking.h  task_route_tracking.hpp  task_shell_command_dispatch.cpp  task_shell_command_dispatch.hpp
src/main_libopencm3_stm32f3/: CMakeLists.txt  main.c  notifications.h  task.c  task.h
src/main_sandbox/: CMakeLists.txt  main.cpp
src/main_sloop_libopencm3_stm32f3/: CMakeLists.txt  notifications.c  task.c  task.h
src/mappers/: CMakeLists.txt  mapper_dualshock2_control.c  mapper_qtrhd06a_coords.c
src/mq/: CMakeLists.txt  mq.c
src/pathbot/: CMakeLists.txt  commands.c  commands.h  coords.c  coords.h  handle_commands.c  handle_coords.c  handle_route_guard_timeout.c  handle_store_dump.c  mode.c  mode.h  motion.c  motion.h  pathbot.c  store.c
src/pathbot_old/: CMakeLists.txt
src/tasks/: CMakeLists.txt  mq.c  tasks.c
src/utils/: CMakeLists.txt  queue.c  queue.h  stack.c  stack.h  volatile_string.c
test/adapters/: CMakeLists.txt  adapter_control_dualshock2_test.c  adapter_coords_qtrhd06a_test.c  adapter_dump_serial_test.c  adapter_mode_blink_test.c  adapter_mode_indicator_and_guard_test.c  adapter_mode_listener_test.c  adapter_motion_l293_test.c  adapter_remote_control_dualshock2_test.c  motion_adapter_l293_test.cpp  motion_l293_test.cpp
test/core/: CMakeLists.txt  core_fixtures.h  core_interface_mock.c  core_interface_mock.h  core_position_test.c  core_task_line_position_receive_test.c  core_task_motion_update_test.c  core_task_remote_control_receive_test.c  core_task_state_indicator_update_test.c  core_test.c  core_vehicle_test.c  (+16 more)
(+518 files in other folders)
